%% Capabilities
erDiagram
  CapabilityDefinition {
    string id PK
  }
  CapabilityDefinitionVersion {
    string id PK
  }
  CapabilityParameterDefinition {
    string id PK
  }
  CapabilityAddress {
    string id PK
  }
  CapabilityEvent {
    string id PK
  }
  CapabilityState {
    string id PK
  }
  FactionStandingScoringPolicy {
    string id PK
  }
  FactionStandingScoringWeight {
    string id PK
  }
  FactionStandingEvidenceEvent {
    string id PK
  }
  KnowledgeBaseDisclosure {
    string id PK
  }
  CapabilityDefinition ||--o{ CapabilityDefinitionVersion : "relates to"
  CapabilityDefinition ||--o{ CapabilityAddress : "relates to"
  CapabilityDefinitionVersion ||--o{ CapabilityParameterDefinition : "relates to"
  CapabilityDefinitionVersion ||--o{ CapabilityEvent : "relates to"
  CapabilityDefinitionVersion ||--o{ CapabilityState : "relates to"
  CapabilityAddress ||--o{ CapabilityEvent : "relates to"
  CapabilityAddress ||--o{ CapabilityState : "relates to"
  FactionStandingScoringPolicy ||--o{ FactionStandingScoringWeight : "relates to"
  FactionStandingScoringPolicy ||--o{ FactionStandingEvidenceEvent : "relates to"
